Fixed width for cells in list, with all left-aligned.

--- a/ENV/shucks/shucks/static/style.css
+++ b/ENV/shucks/shucks/static/style.css
@@ -54,18 +54,23 @@ body {
 .results {
     text-align: center;
     font-size: 20px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .results ul {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 .results li {
     float: left;
+    width: 100px;
 }
 
 .results li p {
-    text-align: center;
+    text-align: left;
     padding: 0px 16px;
 }
 
